# opl2XmiPlayer

./: CMakeLists.txt  adlibBnk.cpp  adlibBnk.h  droPlay.cpp  genMidi.cpp  genMidi.h  keyboard.cpp  midiEvent.cpp  opl.h  oplStream.h  playOplXmi.cpp  play_opl_xmi.cpp  readme.md  tvfx.md  util.cpp  uwPatch.cpp  uwPatch.h  uwPatchNames.h  uw_patch.cpp  xmi.cpp  xmi.h  yamahaYm3812.cpp  yamahaYm3812.h
experiments/: calc.cpp  convert-wavelength.cpp  convert.cpp  envTest-127  envTest-127.cpp  envTest-255  envTest-255.cpp  envTest-255.xpp  envTest-opll  envTest-opll.cpp  envTest.cpp  lookupSin.cpp  rateTest.cpp  reverse.cpp  sines.cpp  sines2.cpp  test.cpp  testexp.cpp  wavelength.cpp
kail/: ale.h  yamaha.h
xmis/demo/: gm.ad
